--- a/blooming color terephy.html
+++ b/blooming color terephy.html
@@ -29,7 +29,7 @@
 </tr>
 <tr>
 <td>
-<p style="text-align: right;"><a href="C:\Users\yehte\OneDrive\Documents\Html\blooming color terephy 3.html"><img src="C:\Users\yehte\OneDrive\Desktop\blooming color\y.jfif" height="200" width="300">
+<p style="text-align: right;"><a href="C:\Users\yehte\OneDrive\Documents\Html\blooming color terephy 3.html"><img src="C:\Users\yehte\OneDrive\Documents\Html\y.jpg" height="200" width="300">
 <td style="background: yellow;">
 <h1 style="color: white;">Yellow</h1>
 <p style="text-indent: 50px">Click the yellow flowers image to read more...</p>
