Update blooming color terephy.html

--- a/blooming color terephy.html
+++ b/blooming color terephy.html
@@ -24,7 +24,7 @@
 
 </td>
 <td>
-<a href="C:\Users\yehte\OneDrive\Documents\Html\blooming color terephy 2.html"><img src="C:\Users\yehte\OneDrive\Desktop\blooming color\p.jpg" height="200" width="300"></a>
+<a href="C:\Users\yehte\OneDrive\Documents\Html\blooming color terephy 2.html"><img src="C:\Users\yehte\OneDrive\Documents\Html\p.jpg" height="200" width="300"></a>
 </td>
 </tr>
 <tr>
@@ -44,7 +44,7 @@
 <p style="text-indent: 50px">Click the blue flowers image to read more...</p>
 </td>
 <td>
-<a href="C:\Users\yehte\OneDrive\Documents\Html\blooming color terephy 4.html"><img src="C:\Users\yehte\OneDrive\Desktop\blooming color\b.jpg" height="200" width="300"></a>
+<a href="C:\Users\yehte\OneDrive\Documents\Html\blooming color terephy 4.html"><img src="C:\Users\yehte\OneDrive\Documents\Html\b.jpg" height="200" width="300"></a>
 </td>
 </tr>
 </table>
